# backend/internal/domains/sale_offer/sale_offer_handler.go
@@ -134,7 +134,7 @@ func (h *Handler) PublishSaleOffer(c *gin.Context) {
 //	@Tags			sale-offer
 //	@Accept			json
 //	@Produce		json
-//	@Param			filter	body		OfferFilter						true	"Sale offer filter"
+//	@Param			filter	body		OfferFilterRequest				true	"Sale offer filter"
 //	@Success		200		{object}	RetrieveOffersWithPagination	"List of sale offers"
 //	@Failure		400		{object}	custom_errors.HTTPError			"Invalid input data"
 //	@Failure		500		{object}	custom_errors.HTTPError			"Internal server error"
@@ -239,20 +239,20 @@ func (h *Handler) GetOrderKeys(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"order_keys": keys})
 }
 
-// @Summary		Buy a sale offer
-// @Description	Allows a user to buy an item from a sale offer
-// @Tags			SaleOffers
-// @Accept			json
-// @Produce		json
-// @Param			id	path	uint	true	"Sale Offer ID"
-// @Security		ApiKeyAuth
-// @Success		200	"Successfully purchased offer"
-// @Failure		403	"Forbidden - user cannot buy his own offer"
-// @Failure		404	"Not Found - sale offer not found"
-// @Failure		500	"Internal Server Error"
-// @Failure		401	"Unauthorized - user must be logged in to buy an offer"
-// @Router			/sale-offer/buy/{id} [delete]
-// @Security		BearerAuth
+//	@Summary		Buy a sale offer
+//	@Description	Allows a user to buy an item from a sale offer
+//	@Tags			SaleOffers
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	uint	true	"Sale Offer ID"
+//	@Security		ApiKeyAuth
+//	@Success		200	"Successfully purchased offer"
+//	@Failure		403	"Forbidden - user cannot buy his own offer"
+//	@Failure		404	"Not Found - sale offer not found"
+//	@Failure		500	"Internal Server Error"
+//	@Failure		401	"Unauthorized - user must be logged in to buy an offer"
+//	@Router			/sale-offer/buy/{id} [delete]
+//	@Security		BearerAuth
 func (h *Handler) Buy(c *gin.Context) {
 	offerID, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
